--- a/03_LESSON/index.html
+++ b/03_LESSON/index.html
@@ -20,7 +20,12 @@
     </head>
     <body>
         <h1>Hello World!</h1>
+
+        <h2>I'm Ready to Learn HTML</h2>
         <p>This is my first web page</p>
+
+        <h3>My Daily Schedule</h3>
+        <p>Let me tell how I...</p>
     </body>
 
 </html>
