--- a/05_LESSON/about.html
+++ b/05_LESSON/about.html
@@ -14,9 +14,29 @@
         <h1>Hi, I'm Prasanth Raja</h1>
 
         <hr>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ducimus delectus quis. Accusantium, nostrum corrupti consectetur sit in quaerat velit ratione qui excepturi! Reprehenderit repellat, iure fuga quaerat id dolore.</p>
-        <hr>
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ducimus delectus quis. Accusantium, nostrum corrupti consectetur sit in quaerat velit ratione qui excepturi! Reprehenderit repellat, iure fuga quaerat id dolore.
+
+           </p>
+
+           <hr>
+           <ul>
+              <li>Download an <a href="html.png" 
+                download>HTML5 favicon</a></li>
+
+                <li>
+                    contact me at <a href="jprasanthjohn@gmail.com">my email address</a>
+                </li>
+                <li>
+                    Dail <a href="tel:+919944830490">my phone number</a>
+                </li>
+                <li>
+                    open <a href="https://www.google.com/" target="_blank">Google</a> in a new tab.
+                </li>
+           </ul>
         &lt;&lt;&lt; &copy;<a href="about.html">Prasanth</a>  &gt;&gt;&gt;
+        <p>
+            <a href="/">Back to Home</a>
+        </p>
     </body>
 
 </html>
