--- a/04_LESSON/index.html
+++ b/04_LESSON/index.html
@@ -17,6 +17,10 @@
             background-color: black;
             color: whitesmoke;
         }
+
+        head{
+            font-style: italic;
+        }
        </style>
     </head>
     <body>
