--- a/05_LESSON/index.html
+++ b/05_LESSON/index.html
@@ -12,10 +12,22 @@
     </head>
 
     <body>
-        <h1>Hello World!</h1>
+        <h1>My Goals for the Year</h1> 
 
         <hr>
-        <section>
+          <nav>
+             <ul>
+                <li>
+                    <a href=" #html">Learning HTML</a>
+                </li>
+                <li>
+                    <a href="#vacation">Planning a Vacation</a>
+                </li>
+             </ul>
+          </nav>
+
+        <hr>
+        <section id="html">
 
         <h2>I'm Ready to Learn HTML</h2>
         <p>This is my first web page</p>
@@ -34,7 +46,7 @@
     </section>
 
         <hr>
-       <section>
+       <section id="vacation">
         <h2>I Am Also Planning a Vacation</h2>
         <p>I've been working hard and <em>really need a getaway</em>.</p>
         <p>I live in <abbr title="Kansas">KS</abbr> so I want visit a beach.</p>
@@ -69,6 +81,9 @@
     </section>
         <hr>
         &lt;&lt;&lt; &copy;<a href="about.html">Prasanth</a>  &gt;&gt;&gt;
+        <p>
+            <a href="#">Back to Top</a>
+        </p>
     </body>
 
 </html>
